Fix margin between buttons on file page on mobile

--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -201,15 +201,21 @@
       margin-bottom: var(--spacing-s);
     }
 
+    .button--file-action:last-child {
+      margin-right: 0;
+    }
+
     .button--file-action {
       display: flex;
       background-color: var(--color-header-background);
-      margin-right: var(--spacing-xxxs) !important;
+      margin-right: var(--spacing-xxxs);
       justify-content: center;
       align-items: center;
-    }
-    .button--file-action:last-of-type {
-      margin-right: unset !important;
+
+      margin-bottom: var(--spacing-xxs);
+      .button__label {
+        margin-left: var(--spacing-xxxs);
+      }
     }
 
     .ratio-wrapper {
@@ -222,13 +228,6 @@
     .ratio-wrapper ~ .button--file-action {
       flex: auto;
     }
-    .button--file-action {
-      margin-right: 0;
-      margin-bottom: var(--spacing-xxs);
-      .button__label {
-        margin-left: var(--spacing-xxxs);
-      }
-    }
 
     &.stretch {
       .button {
@@ -238,9 +237,6 @@
         .button__content {
           justify-content: center;
         }
-      }
-      .button:last-of-type {
-        margin-right: 0;
       }
       .section {
         margin-right: unset;
